--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,20 @@ plugins {
   id 'org.asciidoctor.convert' version '1.5.3' apply false 
 }
 
+
 allprojects {
     repositories {
         jcenter() 
     }
 }
 
+configure(subprojects.findAll {it.name == 'greeter' || it.name == 'greeting-library'} ) { 
+
+    apply plugin : 'groovy'
+
+    dependencies {
+        testCompile 'org.spockframework:spock-core:1.0-groovy-2.4', {
+            exclude module : 'groovy-all'
+        }
+    }
+}
